move/PCI_8164.cs


    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_line4(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double DistZ, System.Double DistU, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_line4(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double PosZ, System.Double PosU, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_line4(System.Int16 CardNo, System.Double DistX, System.Double DistY, System.Double DistZ, System.Double DistU, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_line4(System.Int16 CardNo, System.Double PosX, System.Double PosY, System.Double PosZ, System.Double PosU, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);


    [DllImport("8164.dll")]public static extern Int16 _8164_set_tr_move_all(System.Int16 TotalAxes, ref System.Int16 AxisArray, ref System.Double DistA, ref System.Double StrVelA, ref System.Double MaxVelA, ref System.Double TaccA, ref System.Double TdecA);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_move_all(System.Int16 FirstAxisNo);
    [DllImport("8164.dll")]public static extern Int16 _8164_stop_move_all(System.Int16 FirstAxisNo);
    //I16 FNTYPE _8164_config_from_file(char *file_name);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_fa_speed(System.Int16 AxisNo, System.Double FA_Speed);
    [DllImport("8164.dll")]public static extern Int16 _8164_check_compare_status(System.Int16 AxisNo, ref System.UInt16 cmp_sts);
    [DllImport("8164.dll")]public static extern Int16 _8164_check_continuous_buffer(System.Int16 AxisNo);
    
    
    // New
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sa_move_all(System.Int16 TotalAx, ref System.Int16 AxisArray, ref System.Double PosA, ref System.Double StrVelA, ref System.Double MaxVelA, ref System.Double TaccA, ref System.Double TdecA, ref System.Double SVaccA, ref System.Double SVdecA);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_ta_move_all(System.Int16 TotalAx, ref System.Int16 AxisArray, ref System.Double PosA, ref System.Double StrVelA, ref System.Double MaxVelA, ref System.Double TaccA, ref System.Double TdecA);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_sr_move_all(System.Int16 TotalAx, ref System.Int16 AxisArray, ref System.Double DistA, ref System.Double StrVelA, ref System.Double MaxVelA, ref System.Double TaccA, ref System.Double TdecA, ref System.Double SVaccA, ref System.Double SVdecA);
    
    [DllImport("8164.dll")]public static extern Int16 _8164_set_latch_source(System.Int16 AxisNo, System.Int16 ltc_src);
    [DllImport("8164.dll")]public static extern Int16 _8164_reset_counter_when_latch(System.Int16 AxisNo, System.Int16 EnableByBit);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_idle_pulse(System.Int16 AxisNo, System.Int16 idl_pulse);
    [DllImport("8164.dll")]public static extern Int16 _8164_delay_time(System.Int16 AxisNo, System.Double miniSecond);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_pulser_ratio(System.Int16 AxisNo, System.Int16 PDV, System.Int16 PMG);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_r_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double DistX, System.Double DistY, System.Double SpeedLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_r_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_a_line2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double PosX, System.Double PosY, System.Double SpeedLimit);
    [DllImport("8164.dll")]public static extern Int16 _8164_pulser_a_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double MaxVel);
    [DllImport("8164.dll")]public static extern Int16 _8164_reset_counter_after_home(System.Int16 AxisNo, System.Int16 EnableByBit);
    [DllImport("8164.dll")]public static extern Int16 _8164_escape_home(System.Int16 AxisNo, System.Double SrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_home_search(System.Int16 AxisNo, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double ORGOffset);
    [DllImport("8164.dll")]public static extern Int16 _8164_set_line_move_mode(System.Int16 AxisNo, System.Int16 Mode);
    [DllImport("8164.dll")]public static extern Int16 _8164_verify_speed(System.Double StrVel, System.Double MaxVel, ref System.Double minAccT, ref System.Double maxAccT, System.Double MaxSpeed);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_arc_xyu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_arc_xyu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_arc_xyu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double SVacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_arc_xyu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double SVacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_arc_yzu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_arc_yzu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_arc_yzu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double SVacc);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_arc_yzu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double SVacc);
      
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_arc2(System.Int16 CardNo, ref System.Int16 AxisArray, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_arc_xy(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_arc_xy(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_tr_arc_zu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_ta_arc_zu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec);
   
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_arc_xy(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_arc_xy(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sr_arc_zu(System.Int16 CardNo, System.Double OffsetCx, System.Double OffsetCy, System.Double OffsetEx, System.Double OffsetEy, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
    [DllImport("8164.dll")]public static extern Int16 _8164_start_sa_arc_zu(System.Int16 CardNo, System.Double Cx, System.Double Cy, System.Double Ex, System.Double Ey, System.Int16 DIR, System.Double StrVel, System.Double MaxVel, System.Double Tacc, System.Double Tdec, System.Double SVacc, System.Double SVdec);
